# hardware_simulation

./: .clang-format  .gitignore  ARCHITECTURE_SPECIFICATIONS.md  ARCHITECTURE_SPECIFICATIONS.txt  ASSEMBLY_SPECIFICATION.txt  CMakeLists.txt  Makefile  README.md  STYLE_GIUIDE.txt  STYLE_GUIDE.md  test.c
disk/: file.c
hardware/: CMakeLists.txt
hardware/src/: ARCHITECTURE_SPECIFICATIONS.txt  bit_macros.h  cpu.c  cpu.h  hdd.c  hdd.h  memory.c
hardware/test/: cpu_unittest.cc  hdd_unittest.cc
kernel/src/data_structures/: circular_queue.c
kernel/src/storage/: file.c  file.h  file_system.c
kernel/test/: test.c
src/: bit_utils.c  bit_utils.h  cpu.c  cpu.h  hdd.c  hdd.h  memory.c  memory.h
test/: cpu_unittest.cc
